
lib_LIBRARIES = liblea.a

include_HEADERS = advection.h advection_master.h alic.h intensity_mask.h interpolation.h

liblea_a_SOURCES = advection.cxx advection_master.cxx alic.cxx intensity_mask.cxx advection.h advection_master.h alic.h intensity_mask.h interpolation.h

library_includedir = $(includedir)/lea

library_include_HEADERS = $(include_HEADERS)
